2004-05-11  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* network.pl.in (gst_network_autodetect_modem),
	  (gst_network_freebsd_interface_delete): modified for adding PPP
	  support for FreeBSD.
	  (gst_network_parse_pppconf), (gst_network_parse_pppconf_bool),
	  (gst_network_parse_pppconf_re), (gst_network_replace_pppconf),
	  (gst_network_replace_pppconf_bool), 
	  (gst_network_replace_pppconf_route),
	  (gst_network_replace_pppconf_dial_command),
	  (gst_network_replace_pppconf_volume),
	  (gst_network_get_freebsd5_ppp_persist),
	  (gst_network_freebsd_create_ppp_startif): added.
	  (gst_network_get_interface_parse_table),
	  (gst_network_get_interface_replace_table): Added support for
	  FreeBSD PPP.
	  Other random small bug fixes

2004-05-11  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* parse.pl.in, replace.pl.in: added parse and replace functions for
	  FreeBSD's /etc/ppp/ppp.conf

2004-05-05  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* users-conf.in: lots of bugfixes related to FreeBSD, now it parses
	  correctly data, adds/deletes/modifies users/groups correctly (AFAICT).
	  Added too the <default> tag to the profiles, guessing the default
	  profile with the name tag sucked. Added and removed some strings for
	  translation

2004-05-05  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* users-conf.in (add_group): made it to add users too in linux OS

2004-05-04  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* service.pl.in: made it to look too in /usr/local/etc/rc.d for
	  starting/stopping/searching services
	* platform.pl.in: parsing improvements in the freebsd function
	* parse.pl.in (gst_parse_process_sh_line): parsing improvements,
	  it now only replaces hashes inside valid double quotes
	  (gst_parse_startif): added, for parsing /etc/start_if.$iface
	  in FreeBSD
	* network-conf.in, network.pl.in: added partial network support
	  for FreeBSD, only the PPP stuff is missing, the rest seems quite
	  stable
