@@ -1,5 +1,11 @@
 2004-05-11  Carlos Garnacho Parro  <garnacho@tuxerver.net>
 
+	* boot-conf.in, boot-grub.pl.in, boot.pl.in, partition.pl.in:
+	  added support for FreeBSD, mostly defining alternatives to
+	  partition parsing and system2grub and grub2system translation
+
+2004-05-11  Carlos Garnacho Parro  <garnacho@tuxerver.net>
+
 	* network.pl.in (gst_network_autodetect_modem),
 	  (gst_network_freebsd_interface_delete): modified for adding PPP
 	  support for FreeBSD.
